--- a/src/components/Form/Dropzone/dropzone.css
+++ b/src/components/Form/Dropzone/dropzone.css
@@ -1,20 +1,12 @@
 .dropzone {
-    width: 320px;
+    padding: 31px 18px 33px;
     background: #E4ECF1;
     border: 1px solid #DEE3E5;
     border-radius: 5px;
 }
 
-.dropzone__preview {
-    width: 320px;
-    height: 198px;
-    object-fit: cover; 
-    border-radius: 5px;
-}
-
 .dropzone__description {
     display: flex;
-    margin: 31px 0 33px;
     flex-direction: column;
     align-items: center;
 }
@@ -22,4 +14,7 @@
 .dropzone__description-text {
     text-align: center;
     margin-top: 24px;
+    font-size: 14px;
+    line-height: 16px;
+    color: #2B94E1
 }
