--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -20,8 +20,6 @@
     text-align: center;
 }
 
-.add {
-    padding: 10px 20px 12px;
-    border-radius: 5px;
+.btn_add {
     margin-bottom: 68px;
 }
