--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -17,6 +17,7 @@
     margin-bottom: 40px;
     margin-right: 38px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    list-style: none;
 }
 
 .post__img {
