--- a/src/stylesheets/normalize.css
+++ b/src/stylesheets/normalize.css
@@ -41,6 +41,10 @@
     font-size: 2em;
     margin: 0.67em 0;
   }
+
+  ul {
+    padding: 0;
+  }
   
   /* Grouping content
      ========================================================================== */
