added some hover and active states

--- a/src/components/Form/Description/description.css
+++ b/src/components/Form/Description/description.css
@@ -16,6 +16,10 @@
     border-radius: 5px;
 }
 
+.description__input:focus {
+    border-color: #2B94E1;
+}
+
 .description__input_error {
     border-color: red;
 }
