--- a/src/components/Dashboard/PostsPage/Post/post.css
+++ b/src/components/Dashboard/PostsPage/Post/post.css
@@ -7,6 +7,17 @@
     margin-right: 38px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
     list-style: none;
+    cursor: pointer;
+    transition-property: box-shadow;
+    transition: 0.2s ease-in;
+}
+
+.post:hover {
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.4);
+}
+
+.post:hover .post__title {
+    color: #2bafeb;
 }
 
 .post__img {
@@ -22,7 +33,10 @@
     line-height: 2rem;
     max-width: 280px;
     margin: 16px 0 12px 24px;
+    transition-property: color;
+    transition: 0.1s ease-in;
 }
+
 .post__text {
     max-width: 290px;
     margin-left: 24px;
