--- a/src/components/Form/Dropzone/dropzone.css
+++ b/src/components/Form/Dropzone/dropzone.css
@@ -3,6 +3,7 @@
     background: #E4ECF1;
     border: 1px solid #DEE3E5;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .dropzone__description {
