--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,15 +1,12 @@
 .wrapper {
     position: absolute;
     display: flex;
-    /* width: 100%;
-    min-height: 100%; */
     height: inherit;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -125px;
     background: rgba(0, 0, 0, 0.8);
-    /* flex: 0 2 auto; */
 }
 
 .form {
@@ -25,6 +22,7 @@
     position: absolute;
     top: 9px;
     right: 8px;
+    cursor: pointer;
 }
 .form__content-wrapper {
     display: flex;
@@ -46,3 +44,6 @@
     align-self: center;
 }
 
+.btn_save:hover {
+    background: #1D9C00;
+}
