--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -22,4 +22,10 @@
 
 .btn_add {
     margin-bottom: 68px;
+    background: white;
+    border-radius: 4px;
+}
+
+.btn_add:hover {
+    background: #EEEEEE;
 }
