--- a/src/components/UI/button.css
+++ b/src/components/UI/button.css
@@ -1,4 +1,12 @@
 .btn {
     padding: 10px 20px 12px;
     border-radius: 5px;
+    cursor: pointer;
+    outline: inherit;
+    border: none;
+}
+
+.btn:active {
+    box-shadow: inset 0px 2px 0px rgba(0, 0, 0, 0.3);
+    transform: translateY(2px);
 }
