--- a/src/components/Dashboard/PostsPage/Post/post.css
+++ b/src/components/Dashboard/PostsPage/Post/post.css
@@ -1,10 +1,8 @@
 .post {
     position: relative;
-    flex-basis: 345px;
-    width: 33%;
+    flex: 1 0 270px;
     height: 424px;
-    margin-bottom: 40px;
-    margin-right: 38px;
+    margin: 0 0 40px 40px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
     list-style: none;
     cursor: pointer;
@@ -56,7 +54,7 @@
 }
 
 .post_featured {
-    flex-basis: 730px;
+    flex: 3 1 500px;
     position: relative;
     border-collapse: separate; 
     border-radius: 5px;
