--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url('../../../img/hero_background.png');
+    background: url('/src/assets/img/hero_background.png');
 }
 
 .hero__title {
@@ -13,7 +13,7 @@
 }
 
 .hero__text {
-    width: 450px;
+    max-width: 515px;
     margin: 14px 0 28px;
     line-height: 24px;
     color: #FFFFFF;
