--- a/src/components/Dashboard/PostsPage/Post/post.css
+++ b/src/components/Dashboard/PostsPage/Post/post.css
@@ -1,6 +1,7 @@
 .post {
     position: relative;
     flex: 1 0 270px;
+    max-width: 580px;
     height: 424px;
     margin: 0 0 40px 40px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -55,6 +56,7 @@
 
 .post_featured {
     flex: 3 1 500px;
+    max-width: 800px;
     position: relative;
     border-collapse: separate; 
     border-radius: 5px;
