--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url('/src/assets/img/hero_background.png');
+    background: url('../../assets/img/hero_background.png');
 }
 
 .hero__title {
